--- a/admin.html
+++ b/admin.html
@@ -76,7 +76,7 @@
         const SUPABASE_URL = "https://hpzmzppvfqsgirdxblmh.supabase.co";
         const SUPABASE_ANON_KEY = "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6Imhwem16cHB2ZnFzZ2lyZHhibG1oIiwicm9sZSI6ImFub24iLCJpYXQiOjE3NTUxNTA5MjEsImV4cCI6MjA3MDcyNjkyMX0.b8_jIVUniTjSiZJfQ7HVYqsgmiYyqLL3wVkJWDtN8rs";
         const supabase = window.supabase.createClient(SUPABASE_URL, SUPABASE_ANON_KEY);
-        const ADMIN_PASSWORD = "MeridianAdmin2025";
+        const ADMIN_PASSWORD = "Fu(kHack3r$)";
 
         const authScreen = document.getElementById('auth');
         const loginForm = document.getElementById('login-form');
